<resources>
    <string name="app_name">Marauder App</string>
    <string name="title_activity_maps">Map</string>
    <string name="transparency">Transparency</string>
    <string name="switch_image">Switch Image</string>
    <string name="clickable">Clickable</string>
    <string name="download_image">Download Image</string>


    <string name="help_data">1.Data auto saved under folder OpenCollector 2.Train means fingerprint data,Test means points which will be localized\n3.Export your data first before you starting another round. </string>
    <string name="help_stride">1.You can input x/y to change your current location)\n2.Single tap on the different direction of current position will move a stride length</string>
    <string name="train">Train</string>
    <string name="test">Test</string>
    <string name="stride_length">Stride Length</string>
    <string name="default_stride">1</string>
    <string name="collect_help">\?</string>
    <string name="check">check</string>
    <string name="x_width">X (Width)</string>
    <string name="init_x">1.0</string>
    <string name="y_height">Y (Height)</string>
    <string name="init_y">1.0</string>
    <string name="start">Map Fingerprint</string>
    <string name="load_map">Load map</string>
    <string name="scanning">Scanning...</string>
    <string name="show_fingerprint">Finger Prints</string>
    <string name="viewfingerprints">View Fingerprint</string>
</resources>