<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.mywifiapp2.CollectionMapActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/train" />

            <RadioButton
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/test" />
        </RadioGroup>

        <Button
            android:id="@+id/help_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:onClick="onClick"
            android:text="@string/collect_help"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin">

        <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/stride_length" />

        <EditText
            android:id="@+id/stride_length"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="@string/default_stride" />

        <Button
            android:id="@+id/help_stride"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="onClick"
            android:text="@string/collect_help" /> -->

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin">

        <TextView
            android:id="@+id/x_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/x_width" />

        <EditText
            android:id="@+id/position_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:text="@string/init_x" />

        <TextView
            android:id="@+id/y_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/y_height" />

        <EditText
            android:id="@+id/position_y"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:text="@string/init_y" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_collect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/sign_in_button"
            android:text="@string/start"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/viewfingerprints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sign_in_button"
            android:onClick="onClick"
            android:text="@string/viewfingerprints"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/pick_map_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/sign_in_button"
            android:text="@string/load_map" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin">

        <com.example.mywifiapp2.mapview.PinView
            android:id="@+id/mapImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/download_map_fab"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/upload_map_fab"
            android:layout_marginBottom="5dp"
            android:contentDescription="Download Map"
            android:src="@drawable/download_map"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_map_fab"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:contentDescription="Upload Map"
            android:src="@drawable/upload_map"
            android:layout_alignParentRight="true" />
    </RelativeLayout>



</LinearLayout>
