<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp">

        <TextView
            android:id="@+id/transparency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/transparency" />

        <SeekBar
            android:id="@+id/transparencySeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/transparency_text"
            android:layout_toRightOf="@+id/transparency_text" />

        <SeekBar
            android:id="@+id/rotationSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/transparency_text"
            android:layout_toRightOf="@+id/transparency_text"
            android:layout_below="@+id/transparencySeekBar" />

        <Button
            android:id="@+id/switchImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rotationSeekBar"
            android:onClick="switchImage"
            android:text="@string/switch_image" />

        <Button
            android:id="@+id/downloadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rotationSeekBar"
            android:layout_toRightOf="@+id/switchImage"
            android:onClick="switchImage"
            android:text="@string/download_image" />

        <Button
            android:id="@+id/ClearImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchImage"
            android:text="Clear Map" />

        <TextView
            android:id="@+id/tap_text"
            android:text="tap text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ClearImages"
            android:layout_below="@+id/downloadImage"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>